@@ -1,0 +1,12 @@
+Order Allow,Deny
+Allow from all
+
+
+RewriteEngine On
+Options +FollowSymlinks
+
+
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^([a-z0-9]+)/([a-z0-9]+)/?$ index.php?module=$1&id=$2 [L,NC]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^([a-z0-9]+)/([a-z0-9]+)/([a-z0-9]+)/?$ index.php?module=$1&id=$2&page=$3 [L,NC]
